--- a/index.html
+++ b/index.html
@@ -79,9 +79,12 @@
 <button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-primary pl-4 pr-4">
 <p class="text-black text-sm font-medium leading-normal">All</p>
 </button>
-<button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
-<p class="text-slate-900 dark:text-white text-sm font-medium leading-normal">Offers</p>
-</button>
+<a href="offer.html">
+    <button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
+        <p class="text-slate-900 dark:text-white text-sm font-medium leading-normal">Offers</p>
+    </button>
+</a>
+
 <button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
 <p class="text-slate-900 dark:text-white text-sm font-medium leading-normal">Top Rated</p>
 </button>
