--- a/index.html
+++ b/index.html
@@ -85,9 +85,12 @@
     </button>
 </a>
 
-<button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
+<a href="top-rated.html">
+  <button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
 <p class="text-slate-900 dark:text-white text-sm font-medium leading-normal">Top Rated</p>
 </button>
+</a>
+
 <button class="flex h-10 shrink-0 items-center justify-center gap-x-2 rounded-full bg-slate-200 dark:bg-zinc-800 pl-4 pr-4">
 <p class="text-slate-900 dark:text-white text-sm font-medium leading-normal">Fastest Delivery</p>
 </button>
