--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
 </div>
 <h2 class="text-slate-900 dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1">MoonpieFood</h2>
 <div class="flex w-12 items-center justify-end">
-<button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 bg-transparent text-slate-800 dark:text-white gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
+<a href="notification.html">
+  <button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 bg-transparent text-slate-800 dark:text-white gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
 <span class="material-symbols-outlined text-2xl">notifications</span>
 </button>
+</a>
+
+
 </div>
 </div>
 <!-- Search Bar -->
